@@ -34,6 +34,7 @@
  *****************************************************************************/
 
 #define GIDS_HASH_SIZE          2053
+#define UIDS_HASH_SIZE          4099
 
 
 /*****************************************************************************
